<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.enzo.cascade.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RatingBar
            android:id="@+id/diffSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="89dp"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="1"
            android:stepSize="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/playBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/diffSelector"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:text="@string/button" />

        <TextView
            android:id="@+id/diffPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/diffSelector"
            android:layout_marginTop="37dp"
            android:text="@string/diffPrompt" />

        <Button
            android:id="@+id/scrBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/playBtn"
            android:layout_below="@+id/playBtn"
            android:layout_marginTop="52dp"
            android:text="@string/scorebtn" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
